# cli-gemini-prompt

./: .gitignore  AGENTS.md  KNOWLEDGE.md  README.md  llm-prompt  main.py  pyproject.toml  requirements.txt  tessl.json
.tessl/session-data/: cli-session-expiry  cli-session-id  project-id
specs/: llm-prompt.spec.md
src/: llm_prompt.py
tests/: test_llm_prompt_api_failure.py  test_llm_prompt_empty_prompt.py  test_llm_prompt_main_success.py  test_llm_prompt_missing_api_key.py  test_llm_prompt_network_failure.py  test_llm_prompt_no_args.py  test_llm_prompt_too_many_args.py  test_load_api_key_missing.py  test_load_api_key_success.py  test_load_model_custom.py  test_load_model_default.py  test_load_model_empty_string.py  test_send_prompt_empty_input.py  test_send_prompt_integration.py  test_send_prompt_langchain_error.py  test_send_prompt_success.py
